--- a/index.html
+++ b/index.html
@@ -63,6 +63,36 @@
     opacity: 0.75;
     font-size: 13px;
   }
+  .nation {
+    font-size: 15px;
+  }
+  .footer {
+    color: rgba(0,0,0,.54);
+    background: #f2f2f2;
+    line-height: 40px;
+    position: absolute;
+    min-width: 980px;
+    border-top: 1px solid #e4e4e4;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  .ftpt1 {
+    padding-left: 27px;
+  }
+  .ftpt2 {
+    font-size: 13px;
+  }
+  a.footer {
+    margin: 0 !important;
+
+  }
+  .fta {
+    padding-left: 27px;
+    display: inline-block;
+    color: #5f6368;
+    text-decoration: none;
+  }
 </style>
 </head>
 <body>
@@ -90,6 +120,16 @@
       </form>
     </div>
   </div>
-  
+  <div class="footer">
+    <div class="ftpt1">
+      <span class="nation">United Kingdom</span>
+    </div>
+    <div class="ftpt2">
+      <a class="fta" href="#ads">Advertising</a>
+      <a class="fta" href="#bus">Business</a>
+      <a class="fta" href="#how">How Search Works</a>
+    </div>
+  </div>
+
 </body>
 </html>
